# Pac-Man-Project

./: CMakeLists.txt  README.md  degreeOfDifficulty.c  degreeOfDifficulty.h  game.c  game.h  gameOver.c  gameOver.h  main.c  menu.c  menu.h  records.c  records.h  records.txt
